--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -218,6 +218,45 @@ input
   }
 }
 
+/* microposts */
+
+.microposts
+{
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li
+  {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+.content
+{
+  display: block;
+}
+
+.timestamp
+{
+  color: $grayLight;
+}
+
+.gravatar
+{
+  float: left;
+  margin-right: 10px;
+}
+
+aside
+{
+  textarea
+  {
+    height: 100pc;
+    margin-bottom: 5px;
+  }
+}
+
 /* miscellaneous */
 
 .debug_dump
