--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -133,6 +133,42 @@ aside
     margin-right    : 10px;
 }
 
+.stats
+{
+  overflow: auto;
+  a
+  {
+    float: left;
+    padding: 0 10px;
+    border-left: 1px solid $grayLighter;
+    color: gray;
+    &:first-child
+    {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover
+    {
+      text-decoration: none;
+      color: $blue;
+    }
+  }
+  strong
+  {
+    display: block;
+  }
+}
+
+.user_avatars
+{
+  overflow: auto;
+  margin-top: 10px;
+  .gravatar
+  {
+    margin: 1px 1px;
+  }
+}
+
 /* footer */
 
 footer
@@ -252,7 +288,7 @@ aside
 {
   textarea
   {
-    height: 100pc;
+    height: 100px;
     margin-bottom: 5px;
   }
 }
