Add some polish

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,7 +18,7 @@
   </div>
 <% else %>
   <div class = "center hero-unit">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to the Brian's App!</h1>
 
     <h2>This is the home page for the <a href = "http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application.</h2>
 
